# mersenne-twister

./: .gitignore  Makefile  README.md  SECURITY.md  generate_sudoku.py  install.sh  mt19937.h  multigen.py  pyproject.toml  setup.py  solve_sudoku.c  sudoku.c
.github/workflows/: deploy.yml
AI_Escargot/: AI_Escargot_1.txt
benchmarks/: .gitignore  Makefile  benchmarks.cc  benchmarks.py
doc/: README.md  index.html
examples/: README.md  non-reentrant_32-bit.c  non-reentrant_64-bit.c  reentrant_32-bit.c  reentrant_64-bit.c
examples/C/: .gitignore  Makefile  README.md  non-reentrant_32-bit.c  non-reentrant_64-bit.c  reentrant_64-bit.c  thread-safe_32-bit.c  thread-safe_64-bit.c  thread-unsafe_32-bit.c  thread-unsafe_64-bit.c
examples/C++/: .gitignore  Makefile  README.md  non-reentrant_32-bit.cc  non-reentrant_64-bit.cc  reentrant_32-bit.cc  reentrant_64-bit.cc  thread-unsafe_32-bit.cc  thread-unsafe_64-bit.cc
examples/Python/: 32-bit.py  README.md  non-reentrant_64-bit.py
examples/sudoku/: .gitignore  Makefile  README.md  multigen.py
examples/sudoku/include/: sudoku_utils.h
examples/sudoku/lib/: sudoku.c  sudoku_utils.c
include/: mt19937.h  mt19937_64.h  sudoku_utils.h
lib/: .gitignore  mt19937.c  mt19937_64.c  mt19937_common.c  mt19937_defs.c  pymt19937.c  solve_sudoku.c  sudoku_utils.c
src/: mt19937.c
sudoku/: AI_Escargot_2.txt  README.md
tests/: Makefile  README.md  tests.c  tests.sh
tests/C/: Makefile  tests.c
tests/C++/: .gitignore  Makefile  tests.cc
tests/Python/: tests  tests.py
(+1 files in other folders)
