[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'mt19937'
version = '0.0.1'
authors = [
    { name='Vishal Pankaj Chandratreya' },
]
description = 'Python API for a C implementation of MT19937, a uniform pseudorandom number generator'
readme = "README.md"
requires-python = ">=3.8"
license = {'file' = 'COPYING.md'}
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]

[project.urls]
'Homepage' = 'https://github.com/tfpf/mersenne-twister'
'Bug Tracker' = 'https://github.com/tfpf/mersenne-twister/issues'

[tool.setuptools]
package-dir = {'' = './lib'}

[tool.setuptools.packages.find]
where = ['./lib']
exclude = ['examples', 'tests']
